# reel

./: .dockerignore  .envrc  .flatpak-builder.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Cross.toml  EVENTBUS_RELM4_ANALYSIS.md  EVENTBUS_TO_BROKER_MIGRATION.md  GSTREAMER.md  GTK_PERFORMANCE_ANALYSIS.md  HDR.md  JELLYFIN.md  LICENSE  PLAYER.md  PRODUCT.md  README.md  REFACTOR_MAIN_WINDOW.md  RELEASE.md  RELM4_ANALYSIS.md  SEAORM_MIGRATION_PLAN.md  TASKS.md  TECHNICAL.md  arm64.md  build-flatpak.sh  build.rs  com.github.arsfeld.Reel.json  dev.arsfeld.Reel.json  fix_backends.md  flake.nix  gstreamer-analysis.md  identifying-unused-code.md  iterate_task_310.sh  logs.txt  meson.build  meson_options.txt  relm4-ui.md  remove_unused_methods.sh  (+8 more)
data/: com.github.arsfeld.Reel.desktop  com.github.arsfeld.Reel.metainfo.xml  dev.arsfeld.Reel.desktop  dev.arsfeld.Reel.desktop.in.in  dev.arsfeld.Reel.gschema.xml.in  dev.arsfeld.Reel.metainfo.xml  dev.arsfeld.Reel.metainfo.xml.in.in  meson.build
data/macos/: icon.icns
po/: LINGUAS  POTFILES.in  meson.build
src/: app.rs  config.rs  config.rs.in  constants.rs  lib.rs  main.rs  meson.build  test_utils.rs
src/app/: app.rs  mod.rs
src/backends/: mod.rs  sync_strategy.rs  traits.rs
src/backends/jellyfin/: api.rs  mod.rs  tests.rs
src/backends/local/: mod.rs
src/backends/plex/: api.rs  auth.rs  mod.rs  tests.rs
src/backends/plex/api/: client.rs  decision.rs  errors.rs  home.rs  library.rs  markers.rs  mod.rs  playqueue.rs  progress.rs  retry.rs  search.rs  search_impl.rs  streaming.rs  types.rs
src/cache/: chunk_downloader.rs  chunk_manager.rs  chunk_manager.rs.bak  chunk_store.rs  config.rs  downloader.rs  file_cache.rs  integration_tests.rs  metadata.rs  mod.rs  proxy.rs  state_computer.rs  state_machine.rs  state_types.rs  stats.rs  storage.rs
src/core/: frontend.rs  mod.rs  player_traits.rs  state.rs
src/core/viewmodels/: authentication_view_model.rs  details_view_model.rs  home_view_model.rs  library_view_model.rs  mod.rs  navigation_view_model.rs  player_view_model.rs  preferences_view_model.rs  property.rs  sidebar_view_model.rs  sources_view_model.rs
src/db/: connection.rs  mod.rs
src/db/entities/: auth_tokens.rs  cache_chunks.rs  cache_download_queue.rs  cache_entries.rs  cache_headers.rs  cache_quality_variants.rs  cache_statistics.rs  home_section_items.rs  home_sections.rs  libraries.rs  media_items.rs  media_people.rs  mod.rs  offline_content.rs  people.rs  playback_progress.rs  playback_sync_queue.rs  sources.rs  sync_status.rs
src/db/migrations/: m20250101_000001_create_initial_schema.rs  m20250102_000001_add_episode_fields.rs  m20250103_000001_add_source_connections.rs  m20250104_000001_add_sync_total_items.rs  m20250105_000001_add_connection_tracking.rs  m20250106_000001_add_playqueue_fields.rs  m20250107_000001_add_home_sections.rs  m20250928_000001_add_auth_tokens.rs  m20250929_000001_add_cache_tracking.rs  m20251003_000001_add_people_tables.rs  m20251003_000002_add_marker_fields.rs  m20251004_000001_add_filter_indexes.rs  m20251120_000001_add_auth_status.rs  m20251122_000001_add_playback_sync_queue.rs  m20251209_000001_add_fetched_at.rs  mod.rs
src/db/repository/: auth_token_repository.rs  cache_repository.rs  home_section_repository.rs  library_repository.rs  media_repository.rs  mod.rs  people_repository.rs  playback_repository.rs  playback_sync_repository.rs  source_repository.rs  sync_repository.rs
src/db/repository/sync_repository/: sync_repository_tests.rs
src/events/: event_bus.rs  mod.rs  types.rs
src/mapper/: README.md  macros.rs  media_item_mapper.rs  mod.rs  tests.rs  traits.rs
src/models/: auth_provider.rs  connection.rs  identifiers.rs  mod.rs  playlist_context.rs
src/player/: adaptive_quality.rs  controller.rs  factory.rs  gstreamer_player.rs  mod.rs  mpv_player.rs  shaders.rs  traits.rs  types.rs
src/player/gstreamer/: bus_handler.rs  mod.rs  sink_factory.rs  stream_manager.rs
src/services/: auth_manager.rs  background_loader.rs  cache.rs  cache_keys.rs  cache_service.rs  config_service.rs  conflict_resolver.rs  data.rs  initialization.rs  mod.rs  source_coordinator.rs  sync.rs
src/services/brokers/: connection_broker.rs  media_broker.rs  mod.rs  sync_broker.rs
src/services/commands/: auth_commands.rs  media_commands.rs  mod.rs  sync_commands.rs
src/services/core/: auth.rs  backend.rs  cache_config.rs  connection.rs  connection_cache.rs  media.rs  metadata_refresh.rs  mod.rs  playback.rs  playlist.rs  playqueue.rs  sync.rs  update.rs
src/services/workers/: connection_worker.rs  image_worker.rs  mod.rs  search_worker.rs  sync_worker.rs
src/state/: app_state.rs  mod.rs
src/styles/: base.css  details.css  player.css  sidebar.css
src/ui/: auth_dialog.rs  filters.rs  main_window.rs  mod.rs  preferences_window.rs  resources.gresource.xml  sidebar.rs  style.css  window_blueprint.rs
src/ui/blueprints/: auth_dialog.blp  library_view.blp  movie_details.blp  player.blp  show_details.blp  window.blp
src/ui/components/: mod.rs
src/ui/dialogs/: auth_dialog.rs  mod.rs  preferences_dialog.rs
src/ui/factories/: media_card.rs  section_row.rs  source_item.rs
src/ui/main_window/: mod.rs  navigation.rs  workers.rs
src/ui/pages/: home.rs  library.rs  mod.rs  movie_details.rs  optimized_library.rs  player.rs  preferences.rs  search.rs  show_details.rs  sources.rs
src/ui/pages/player/: auto_play.rs  (+13 more)
src/ui/shared/: broker.rs  commands.rs  image_helpers.rs  mod.rs  person_card.rs  quality_selector.rs  sync_status.rs
src/ui/viewmodels/: details_view_model.rs  home_view_model.rs  library_view_model.rs  mod.rs  player_view_model.rs  property.rs  sidebar_view_model.rs  sources_view_model.rs
src/ui/widgets/: mod.rs  player_overlay.rs
src/utils/: errors.rs  image_loader.rs  mod.rs  optimized_image_loader.rs  platform.rs
src/workers/: cache_cleanup_worker.rs  config_manager.rs  connection_monitor.rs  connection_monitor_tests.rs  image_loader.rs  mod.rs  playback_sync_worker.rs  search_worker.rs  search_worker_tests.rs  sync_worker.rs
(+815 files in other folders)
