[package]
name = "reel"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0-or-later"
description = "A modern, native media player for the GNOME desktop"
repository = "https://github.com/arsfeld/reel"
keywords = ["media", "player", "plex", "jellyfin", "gnome"]
categories = ["multimedia", "gui"]

[dependencies]
# GTK and UI
gtk4 = { version = "0.10", features = ["v4_12"] }
gdk4 = { version = "0.10", features = ["v4_12"] }
gdk-pixbuf = "0.21"
libadwaita = { version = "0.8", features = ["v1_5"] }

# Media playback
gstreamer = "0.24"
gstreamer-video = "0.24"
gstreamer-player = "0.24"
gstreamer-pbutils = "0.24"
libmpv2 = "5.0"
libmpv2-sys = "4.0"

# Async runtime
tokio = { version = "1.47", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
futures = "0.3"

# HTTP and networking
reqwest = { version = "0.12", features = ["json", "stream", "cookies", "native-tls"] }
url = "2.5"
percent-encoding = "2.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Database and caching
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
once_cell = "1.21"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
libc = "0.2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
image = "0.25"
webp = "0.3"
base64 = "0.22"
uuid = { version = "1.18", features = ["v4", "serde"] }
lru = "0.12"

# Localization
gettext-rs = { version = "0.7", features = ["gettext-system"] }

[dev-dependencies]
mockito = "1.7"
tempfile = "3.21"
criterion = "0.7"

[build-dependencies]
glib-build-tools = "0.21"


[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true
