[package]
name = "reel"
version = "0.6.1"
edition = "2024"
authors = ["Alexandre Rosenfeld <alex@rosenfeld.one>"]
license = "GPL-3.0-or-later"
description = "A modern, native media player for the GNOME desktop"
repository = "https://github.com/arsfeld/reel"
keywords = ["media", "player", "plex", "jellyfin", "gnome"]
categories = ["multimedia", "gui"]

[dependencies]
# GTK and UI (required for Relm4)
gtk4 = { version = "0.10", features = ["v4_14"] }
gdk4 = { version = "0.10", features = ["v4_14"] }
gdk-pixbuf = { version = "0.21" }
libadwaita = { version = "0.8", features = ["v1_5"] }

# Relm4
relm4 = { version = "0.10" }
relm4-components = { version = "0.10" }
relm4-icons = { version = "0.10" }
tracker = { version = "0.2" }

# Media playback
gstreamer = "0.24"
gstreamer-video = "0.24"
gstreamer-player = "0.24"
gstreamer-pbutils = "0.24"
libmpv2 = "5.0"
libmpv2-sys = "4.0"

# Async runtime
tokio = { version = "1.47", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
futures = "0.3"

# HTTP and networking
reqwest = { version = "0.12", features = ["json", "stream", "cookies", "native-tls"] }
url = "2.5"
percent-encoding = "2.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Database and caching
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-chrono", "with-json", "with-uuid"] }
sea-orm-migration = { version = "1.1", features = ["runtime-tokio-native-tls", "sqlx-sqlite"] }
sea-query = "0.32"
sea-query-binder = { version = "0.7", features = ["sqlx-sqlite"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
once_cell = "1.21"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
libc = "0.2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
image = "0.25"
webp = "0.3"
base64 = "0.22"
uuid = { version = "1.18", features = ["v4", "serde"] }
sha2 = "0.10"
md5 = "0.7"
lru = "0.16"
lazy_static = "1.5"
tantivy = "0.22"

# Localization
gettext-rs = { version = "0.7", features = ["gettext-system"] }

[dev-dependencies]
mockito = "1.7"
tempfile = "3.22"
criterion = "0.7"

[build-dependencies]
glib-build-tools = { version = "0.21" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true

# Debian package configuration for cargo-deb
[package.metadata.deb]
maintainer = "Alexandre Rosenfeld <alex@rosenfeld.one>"
copyright = "2025, Alexandre Rosenfeld <alex@rosenfeld.one>"
license-file = ["LICENSE", "0"]
extended-description = """\
Reel is a modern, offline-first media player for the GNOME desktop that provides \
a premium media consumption experience with support for multiple backends including \
Plex, Jellyfin, and local files. Features include hardware-accelerated playback, \
seamless background synchronization, and a beautiful GTK4/libadwaita interface."""
depends = "$auto, libgtk-4-1 (>= 4.6), libadwaita-1-0 (>= 1.0), gstreamer1.0-plugins-base (>= 1.0), gstreamer1.0-plugins-good (>= 1.0), gstreamer1.0-plugins-bad (>= 1.0), gstreamer1.0-plugins-ugly (>= 1.0), gstreamer1.0-libav (>= 1.0), libmpv1 | libmpv2"
section = "video"
priority = "optional"
assets = [
    ["target/release/reel", "usr/bin/", "755"],
    ["data/dev.arsfeld.Reel.desktop", "usr/share/applications/", "644"],
    ["data/icons/hicolor/scalable/apps/dev.arsfeld.Reel.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["README.md", "usr/share/doc/reel/README", "644"],
]

# RPM package configuration for cargo-generate-rpm  
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/reel", dest = "/usr/bin/reel", mode = "755" },
    { source = "data/dev.arsfeld.Reel.desktop", dest = "/usr/share/applications/dev.arsfeld.Reel.desktop", mode = "644" },
    { source = "data/icons/hicolor/scalable/apps/dev.arsfeld.Reel.svg", dest = "/usr/share/icons/hicolor/scalable/apps/dev.arsfeld.Reel.svg", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/reel/README.md", mode = "644", doc = true },
]
auto-req = "disabled"  # We'll specify requirements manually
requires = { gtk4 = "*", libadwaita = "*", gstreamer1 = "*", gstreamer1-plugins-base = "*", gstreamer1-plugins-good = "*", gstreamer1-plugins-bad-free = "*", gstreamer1-plugins-ugly-free = "*", gstreamer1-libav = "*", mpv-libs = "*" }
